Fixed pages switch not working on mobile

--- a/src/Pages/Blog/blog.css
+++ b/src/Pages/Blog/blog.css
@@ -327,10 +327,6 @@
         margin-left: 15px;
     }
 
-    #final-image-blog{
-        height: 400px;
-    }
-
     #final-image-blog img{
         height: 50%;
     }
@@ -422,10 +418,6 @@
         left: 0;
         margin-top: 20px;
         margin-left: 10px;
-    }
-
-    #final-image-blog{
-        height: 400px;
     }
 
     #final-image-blog img{
